laborations/lab2/testsuite/good/redeclare_after_block.cc
int main () {
  { bool x0 = true ; }
  int x0 = 0 ;
  printInt(1);
  return 0;
}
