laborations/lab2/testsuite/bad/bad/ass_bool_int_parameter.cc
int main() {
     int i = foo(true);
     return 0 ;
}

int foo(bool b) { b = 1; }
